--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -321,5 +321,13 @@
   },
   "subscribe": {
     "success": "¡Gracias por suscribirte!"
+  },
+  "not_found": {
+    "code": "404",
+    "title": "Oops! Pagina no encontrada",
+    "description": "Parece que la pagina que buscas no existe o fue movida. Pero no te preocupes, tenemos muchas cosas deliciosas para ti!",
+    "go_home": "Ir al inicio",
+    "explore_products": "Explorar productos",
+    "products_title": "Mientras tanto, descubre nuestros productos"
   }
 }
